feat: rewrite cli for resp